--- a/jugando.html
+++ b/jugando.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-    <div class="main">
-        <div id="contenedor">
-            <div id="contenedorjuego">
+    <div class="main" >
+        <div id="contenedor" >
+            <div id="contenedorjuego" styles="">
                 <div class="box2">
                     <div class="w3-progress-container" style="height: 5px;">
                         <div id="myBar" class="w3-progressbar w3-green" style="width:100%; height: 5px;"></div>
