--- a/jugando.html
+++ b/jugando.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="main" >
-        <div id="contenedor" >
+        <div id="contenedor1" >
             <div id="contenedorjuego" styles="">
                 <div class="box2">
                     <div class="w3-progress-container" style="height: 5px;">
